--- a/SkydivingFiles/Templates/manifest.html
+++ b/SkydivingFiles/Templates/manifest.html
@@ -20,13 +20,7 @@
       <div class="jumperList" id="scrollable">
         <h1>Jumper List</h1>
         <ul id="activeJumpers">
-          <!--
-          {% for jumper in jumperList %}
-          <li class="=jumper">
-            <span class='jumper'>{{jumper.name}} - {{jumper.license.lic}}</span>
-          </li>
-          {% endfor %}
-        -->
+          <!-- Jumper Section -->
         </ul>
         <button type="button" class="buttonFooter">Add to Load</button>
         <button type="button" class="buttonFooter">Remove From Load</button>
@@ -35,6 +29,7 @@
       </div>
       <div class="loads">
         <h1 class="loadHeader">Today's Loads</h1>
+        <!-- Load Section -->
       </div>
       <div class="menu">
         <button type="button">New Tandem Student</button>
