--- a/SkydivingFiles/Static/styles.css
+++ b/SkydivingFiles/Static/styles.css
@@ -41,6 +41,7 @@ ul {
 .menu {
   display: grid;
   grid-column: 1/3;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   border: 5px solid;
   padding: 1em;
   box-sizing: border-box;
