--- a/SkydivingFiles/Templates/manifest.html
+++ b/SkydivingFiles/Templates/manifest.html
@@ -22,19 +22,31 @@
         <ul id="activeJumpers">
           <!-- Jumper Section -->
         </ul>
-        <button type="button" class="buttonFooter">Add to Load</button>
-        <button type="button" class="buttonFooter">Remove From Load</button>
+        <div class="buttonContainer">
+          <button type="button" class="buttonFooter">Add to Load</button>
+          <button type="button" class="buttonFooter">Remove From Load</button>
+          <button type="button" class="button">New Tandem Student</button>
+          <button type="button">New Solo Student</button>
+          <button type="button">New Fun Jumper</button>
+        </div>
+
         <!-- could use check boxes for type of jumper (TI, Coach, etc.) -->
 
       </div>
       <div class="loads">
         <h1 class="loadHeader">Today's Loads</h1>
-        <!-- Load Section -->
+        <div class="loadDisplay">
+          <!-- Load Section -->
+        </div>
+
       </div>
-      <div class="menu">
-        <button type="button">New Tandem Student</button>
-        <button type="button">New Solo Student</button>
-        <button type="button">New Fun Jumper</button>
+      <div class="menuContainter">
+        <div class="menu">
+          <button type="button" class="button">New Tandem Student</button>
+          <button type="button">New Solo Student</button>
+          <button type="button">New Fun Jumper</button>
+        </div>
+
       </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
