--- a/SkydivingFiles/Static/styles.css
+++ b/SkydivingFiles/Static/styles.css
@@ -27,15 +27,19 @@ ul {
 }
 
 /* rename to loadContainer */
-.jumperList {
+.jumperList, .AddToLoad {
   display: grid;
   grid-column: 2/3;
-  grid-row: 1/2;
-  grid-template-rows: 1fr 4fr 1fr;
+  grid-row: 1/3;
+  grid-template-rows: repeat(6, 1fr);
   border-radius: 25px;
   padding: 1em;
   box-sizing: border-box;
   background: lightskyblue;
+}
+
+.AddToLoad {
+  display: none;
 }
 
 #activeJumpers {
@@ -43,10 +47,16 @@ ul {
   border: 5px solid;
   position: relative;
   overflow-y: scroll;
+  grid-row: 2/7;
+  font-size: 1.5em;
+}
+
+.jumper:hover{
+  font-weight: bold;
 }
 
 .menuContainter {
-  grid-column: 1/3;
+  grid-column: 1/2;
   /*grid-template-columns: 1fr 1fr 1fr 1fr 1fr;*/
   border-radius: 25px;
   padding: 1em;
@@ -82,6 +92,10 @@ ul {
   text-align: center;
   font-weight: bold;
   font-size: 2em;
+}
+
+.loadHover {
+  font-weight: bold;
 }
 
 .button {
