--- a/SkydivingFiles/Templates/manifest.html
+++ b/SkydivingFiles/Templates/manifest.html
@@ -18,7 +18,8 @@
 
     <div class="container">
       <div class="jumperList" id="scrollable">
-        <h1>Jumper List</h1>
+        <h1>Jumpers</h1>
+        <h1 class="AddToLoad">Add To Load:</h1>
         <ul id="activeJumpers">
           <!-- Jumper Section -->
         </ul>
