--- a/SkydivingFiles/Templates/manifest.html
+++ b/SkydivingFiles/Templates/manifest.html
@@ -17,7 +17,7 @@
     -->
 
     <div class="container">
-      <div class="jumperList" id="scrollable">
+      <div class="jumperContainer" id="scrollable">
         <h1>Jumpers</h1>
         <h1 class="AddToLoad">Add To Load:</h1>
         <ul id="activeJumpers">
@@ -34,7 +34,7 @@
         <!-- could use check boxes for type of jumper (TI, Coach, etc.) -->
 
       </div>
-      <div class="loads">
+      <div class="loadContainer">
         <h1 class="loadHeader">Today's Loads</h1>
         <div class="loadDisplay">
           <!-- Load Section -->
@@ -46,6 +46,11 @@
           <button type="button" class="button">New Tandem Student</button>
           <button type="button">New Solo Student</button>
           <button type="button">New Fun Jumper</button>
+        </div>
+        <div class="=addToLoad">
+          <ul>
+            
+          </ul>
         </div>
 
       </div>
