--- a/SkydivingFiles/Templates/manifest.html
+++ b/SkydivingFiles/Templates/manifest.html
@@ -49,13 +49,13 @@
         </div>
         <div class="=addToLoad">
           <ul>
-            
+
           </ul>
         </div>
 
       </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='scripts.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='scrpts.js') }}"></script>
   </body>
 </html>
